--- a/tosca-parameters/galaxy-elastic-cluster.parameters.yaml
+++ b/tosca-parameters/galaxy-elastic-cluster.parameters.yaml
@@ -9,15 +9,13 @@ inputs:
     tag_type: "select"
     description: "CPUs, memory size (RAM), root disk size"
     constraints: 
-      - { value: "small", label: "Small (1 cpu, 2 GB RAM, 20 GB dsk)" }
       - { value: "medium", label: "Medium (2 cpu, 4 GB RAM, 20 GB dsk)" }
       - { value: "large", label: "Large (4 cpu, 8 GB RAM, 20 GB dsk)" }
-      - { value: "xlarge", label: "xLarge (8 cpu, 16 GB RAM, 20 GB dsk)" }
     tab: "Virtual hardware"
 
   wn_num:
     display_name: "Worker nodes number"
-    tag_type": "select"
+    tag_type: "select"
     description: "Number of worker nodes in the cluster"
     constraints:
       - { value: "1", label: "1 worker node" }
@@ -30,7 +28,6 @@ inputs:
     tag_type: "select"
     description: "CPUs, memory size (RAM), root disk size"
     constraints:
-      - { value: "small", label: "Small (1 cpu, 2 GB RAM, 20 GB dsk)" }
       - { value: "medium", label: "Medium (2 cpu, 4 GB RAM, 20 GB dsk)" }
       - { value: "large", label: "Large (4 cpu, 8 GB RAM, 20 GB dsk)" }
       - { value: "xlarge", label: "xLarge (8 cpu, 16 GB RAM, 20 GB dsk)" }
@@ -38,18 +35,18 @@ inputs:
 
   instance_key_pub:
     display_name: "Galaxy instance SSH public key"
-    tag_type": "text"
-    description: "Paste here your SSH public key"
+    tag_type: "ssh_pub_key_type"
+    description: "Paste here your SSH public key or configure a default key"
+    placeholder: 'Leave blank this field to load your default SSH public key'
     tab: "Virtual hardware"
     required: yes
 
-  galaxy_storage_type:
+  storage_encryption:
     display_name: "Enable encryption"
-    tag_type: "radio"
-    description: "Encrypt storage"
+    tag_type: "toggle"
+    description: "Encrypt instance external storage"
     constraints:
-      - { value: "plain", label: "Plain mode" }
-      - { value: "encryption", label: "Encryption" }
+      - { value: "True", label: "On" }
     tab: "Virtual hardware"
 
   storage_size:
@@ -91,7 +88,7 @@ inputs:
     tag_type: "select"
     description: "Load Galaxy tools preset"
     constraints: 
-      - { value: "galaxy-no-tools", label: "Galaxy minimal" }
+      - { value: "galaxy-minimal", label: "Galaxy minimal" }
       - { value: "galaxy-CoVaCS", label: "Galaxy CoVaCS" }
       - { value: "galaxy-GDC_Somatic_Variant", label: "Galaxy GDC Somatic Variant Calling" }
       - { value: "galaxy-rna-workbench", label: "Galaxy RNA workbench" }
@@ -103,7 +100,7 @@ inputs:
     tag_type: "select"
     description: "Select reference data repository"
     constraints:
+      - { value: "data.galaxyproject.org", label: "usegalaxy.org Galaxy reference data CVMFS repository" }
       - { value: "elixir-italy.galaxy.refdata", label: "ELIXIR-IT Galaxy reference data CVMFS repository" }
       - { value: "elixir-italy.covacs.refdata", label: "ELIXIR-IT Galaxy CoVaCS reference data CVMFS repository" }
-      - { value: "data.galaxyproject.org", label: "usegalaxy.org Galaxy reference data CVMFS repository" }
     tab: "Galaxy"
