--- a/tosca-parameters/galaxy-express.parameters.yaml
+++ b/tosca-parameters/galaxy-express.parameters.yaml
@@ -9,7 +9,6 @@ inputs:
     tag_type: "select"
     description: "CPUs, memory size (RAM), root disk size"
     constraints: 
-      - { value: "small", label: "Small (1 cpu, 2 GB RAM, 20 GB dsk)" }
       - { value: "medium", label: "Medium (2 cpu, 4 GB RAM, 20 GB dsk)" }
       - { value: "large", label: "Large (4 cpu, 8 GB RAM, 20 GB dsk)" }
       - { value: "xlarge", label: "xLarge (8 cpu, 16 GB RAM, 20 GB dsk)" }
@@ -17,17 +16,18 @@ inputs:
 
   instance_key_pub:
     display_name: "Galaxy instance SSH public key"
-    tag_type": "text"
-    description: "Paste here your SSH public key"
+    tag_type: "ssh_pub_key_type"
+    description: "Paste here your SSH public key or configure a default key"
+    placeholder: 'Leave blank this field to load your default SSH public key'
     tab: "Virtual hardware"
+    required: yes
 
-  galaxy_storage_type:
+  storage_encryption:
     display_name: "Enable encryption"
-    tag_type: "radio"
-    description: "Encrypt storage"
+    tag_type: "toggle"
+    description: "Encrypt instance external storage"
     constraints:
-      - { value: "plain", label: "Plain mode" }
-      - { value: "encryption", label: "Encryption" }
+      - { value: "True", label: "On" }
     tab: "Virtual hardware"
 
   storage_size:
@@ -46,6 +46,7 @@ inputs:
     tag_type: "select"
     description: "Galaxy release 18.05 recommended"
     constraints:
+      - { value: "release_19.05", label: "Galaxy release 19.05" }
       - { value: "release_18.05", label: "Galaxy release 18.05" }
       - { value: "release_17.05", label: "Galaxy release 17.05" }
     tab: "Galaxy"
@@ -81,7 +82,7 @@ inputs:
     tag_type: "select"
     description: "Select reference data repository"
     constraints:
-      - { value: "elixir-italy.galaxy.refdata", label: "ELIXIR-IT Galaxy reference data CVMFS repository" }
-      - { value: "elixir-italy.covacs.refdata", label: "ELIXIR-IT Galaxy CoVaCS reference data CVMFS repository" }
       - { value: "data.galaxyproject.org", label: "usegalaxy.org Galaxy reference data CVMFS repository" }
+      - { value: "elixir-italy.covacs.refdata", label: "ELIXIR-IT Galaxy CoVaCS reference data CVMFS repository" }
+      - { value: "elixir-italy.galaxy.refdata", label: "ELIXIR-IT Galaxy reference data CVMFS repository" }
     tab: "Galaxy"
