--- a/tosca-templates/galaxy-elastic-cluster.yaml
+++ b/tosca-templates/galaxy-elastic-cluster.yaml
@@ -1,14 +1,13 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
 imports:
-  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/custom_types.yaml
+  - indigo_custom_types: https://raw.githubusercontent.com/mtangaro/tosca-types/master/custom_types.yaml
 
 description: >
   Deploy Galaxy from scratch with elastic cluster support (SLOW).
   The basic configuration includes CentOS 7, SLURM, the selected Galaxy flavour, companion software and reference data.
   Configure, click on the "Submit" button and wait for the confirmation e-mail(s) with instructions on how to provide your passphrase (if encryption is enabled) and log in to your new Galaxy instance.
   If after some hours you do not receive any e-mail please be sure to check your SPAM BOX.
-
 
 topology_template:
   inputs:
@@ -40,23 +39,6 @@ topology_template:
       default: false
       required: false
 
-    galaxy_storage_type:
-      type: string
-      description: Storage type (Iaas Block Storage, Onedata, Filesystem encryption)
-      default: "IaaS"
-    userdata_provider:
-      type: string
-      description: default OneProvider
-      default: "not_a_privder_url"
-    userdata_token:
-      type: string
-      description: Access token for onedata space
-      default: "not_a_token"
-    userdata_space:
-      type: string
-      description: Onedata space
-      default: "galaxy"
-
     admin_email:
       type: string
       description: email of the admin user
@@ -72,15 +54,41 @@ topology_template:
     instance_description:
       type: string
       description: galaxy instance description
-      default: 'ELIXIR-IT SLURM (elastic)'
+      default: "ELIXIR-ITALY"
     instance_key_pub:
       type: string
       description: galaxy instance ssh public key
-      default: 'your_ssh_public_key'
+      default: your_ssh_public_key
     export_dir:
       type: string
       description: path to store galaxy data
       default: /export
+
+    storage_encryption:
+      type: boolean
+      description: Enable storage encryption using Vault to store secrets and LUKS to encrypt
+      default: False
+      required: true
+    vault_url:
+      type: string
+      description: Hashicorp Vault server url
+      default: "https://cloud-90-147-75-223.cloud.ba.infn.it:8200"
+      required: false
+    vault_wrapping_token:
+      type: string
+      description: Vault Wrapping token to write secret
+      default: not_a_wrapping_token
+      required: false
+    vault_secret_path:
+      type: string
+      description: Vault path to store secret
+      default: "subject/depuuid"
+      required: false
+    vault_secret_key:
+      type: string
+      description: Vault secret key name
+      default: secret
+      required: false
 
     flavor:
       type: string
@@ -91,34 +99,18 @@ topology_template:
       type: boolean
       description: Install Reference data
       default: true
-    refdata_dir:
+    refdata_cvmfs_configuration:
       type: string
-      description: path to store galaxy reference data
-      default: /cvmfs
-    refdata_repository_name:
-      type: string
-      description: Onedata space name, CernVM-FS repository name or subdirectory downaload name
-      default: 'elixir-italy.galaxy.refdata'
-    refdata_provider_type:
-      type: string
-      description: Select Reference data provider type (Onedata, CernVM-FS or download)
+      description: Configure cvmfs or load preconfigured repository
       default: 'cvmfs_preconfigured'
-    refdata_provider:
+    refdata_cvmfs_repository_name:
       type: string
-      description: Oneprovider for reference data
-      default: 'not_a_provider'
-    refdata_token:
-      type: string
-      description: Access token for reference data
-      default: 'not_a_token'
+      description: CernVM-FS repository name
+      default: 'elixir-italy.galaxy.refdata'
     refdata_cvmfs_server_url:
       type: string
       description: CernVM-FS server, replica or stratum-zero
       default: '90.147.102.186'
-    refdata_cvmfs_repository_name:
-      type: string
-      description: Reference data CernVM-FS repository name
-      default: 'elixir-italy.galaxy.refdata'
     refdata_cvmfs_key_file:
       type: string
       description: CernVM-FS public key
@@ -131,7 +123,10 @@ topology_template:
       type: integer
       description: CernVM-FS proxy port
       default: 80
-
+    refdata_dir:
+      type: string
+      description: path to store galaxy reference data
+      default: /cvmfs
 
   node_templates:
 
@@ -150,10 +145,11 @@ topology_template:
     galaxy_portal:
       type: tosca.nodes.indigo.GalaxyPortalAndStorage
       properties:
-        os_storage: { get_input: galaxy_storage_type }
-        token: { get_input: userdata_token }
-        provider: { get_input: userdata_provider }
-        space: { get_input: userdata_space }
+        storage_encryption: { get_input: storage_encryption }
+        vault_url: { get_input: vault_url }
+        vault_wrapping_token: { get_input: vault_wrapping_token }
+        vault_secret_path: { get_input: vault_secret_path }
+        vault_secret_key: { get_input: vault_secret_key }
         admin_email: { get_input: admin_email }
         admin_api_key: { get_input: admin_api_key }
         version: { get_input: version }
@@ -176,23 +172,20 @@ topology_template:
       type: tosca.nodes.indigo.GalaxyReferenceData
       properties:
         reference_data: { get_input: reference_data }
-        refdata_dir: { get_input: refdata_dir }
-        flavor: { get_input: flavor }
-        refdata_repository_name: { get_input: refdata_repository_name }
-        refdata_provider_type: { get_input: refdata_provider_type }
-        refdata_provider: { get_input: refdata_provider }
-        refdata_token: { get_input: refdata_token }
-        refdata_cvmfs_server_url: { get_input: refdata_cvmfs_server_url }
+        refdata_cvmfs_configuration: { get_input: refdata_cvmfs_configuration }
         refdata_cvmfs_repository_name: { get_input: refdata_cvmfs_repository_name }
+        refdata_cvmfs_server_url: { get_input: refdata_cvmfs_server_url }
         refdata_cvmfs_key_file: { get_input: refdata_cvmfs_key_file }
         refdata_cvmfs_proxy_url: { get_input: refdata_cvmfs_proxy_url }
         refdata_cvmfs_proxy_port: { get_input: refdata_cvmfs_proxy_port }
+        refdata_dir: { get_input: refdata_dir }
+        flavor: { get_input: flavor }
       requirements:
         - host: galaxy_portal
         - dependency: galaxy_tools
 
     lrms_front_end:
-      type: tosca.nodes.indigo.LRMS.FrontEnd.Slurm
+      type: tosca.nodes.indigo.LRMS.FrontEnd.SlurmGalaxy
       properties:
         wn_ips: { get_attribute: [ lrms_wn, private_address ] }
         hybrid: { get_input: hybrid }
@@ -207,6 +200,12 @@ topology_template:
             dns_name: slurmserver
             network_name: PUBLIC
             ports:
+              galaxyctl_api_port:
+                protocol: tcp
+                source: 5001
+              luks_api_port:
+                protocol: tcp
+                source: 5000
               http_port:
                 protocol: tcp
                 source: 80
@@ -242,7 +241,7 @@ topology_template:
         size: { get_input: storage_size }
 
     wn_node:
-      type: tosca.nodes.indigo.LRMS.WorkerNode.Slurm
+      type: tosca.nodes.indigo.LRMS.WorkerNode.SlurmGalaxy
       properties:
         front_end_ip: { get_attribute: [ lrms_server, private_address, 0 ] }
         public_front_end_ip: { get_attribute: [ lrms_server, public_address, 0 ] }
@@ -261,16 +260,15 @@ topology_template:
         - dependency: galaxy_wn
 
     galaxy_wn:
-      type: tosca.nodes.indigo.GalaxyWnCvmfsReferenceData
+      type: tosca.nodes.indigo.GalaxyWNCVMFS
       properties:
         export_dir: { get_input: export_dir }
         front_end_ip: { get_attribute: [ lrms_server, private_address, 0 ] }
-        flavor: { get_input: flavor }
-        version: { get_input: version }
+        storage_encryption: { get_input: storage_encryption }
         reference_data: { get_input: reference_data }
-        refdata_provider_type: { get_input: refdata_provider_type }
-        refdata_cvmfs_server_url: { get_input: refdata_cvmfs_server_url }
+        refdata_cvmfs_configuration: { get_input: refdata_cvmfs_configuration }
         refdata_cvmfs_repository_name: { get_input: refdata_cvmfs_repository_name }
+        refdata_cvmfs_server_url: { get_input: refdata_cvmfs_server_url }
         refdata_cvmfs_key_file: { get_input: refdata_cvmfs_key_file }
         refdata_cvmfs_proxy_url: { get_input: refdata_cvmfs_proxy_url }
         refdata_cvmfs_proxy_port: { get_input: refdata_cvmfs_proxy_port }
@@ -304,7 +302,9 @@ topology_template:
             #image: ubuntu-16.04_2nic
 
   outputs:
-    galaxy_url:
+    endpoint:
       value: { concat: [ 'http://', get_attribute: [ lrms_server, public_address, 0 ], '/galaxy' ] }
     cluster_ip:
       value: { get_attribute: [ lrms_server, public_address, 0 ] }
+    wn_ips:
+      value: { get_attribute: [ lrms_wn, private_address ] }
