--- a/tosca-templates/galaxy-express-cluster.yaml
+++ b/tosca-templates/galaxy-express-cluster.yaml
@@ -4,10 +4,11 @@ imports:
   - indigo_custom_types: https://raw.githubusercontent.com/mtangaro/tosca-types/master/custom_types.yaml
 
 description: >
-  Deploy Galaxy from scratch with cluster support (SLOW).
+  Deploy Galaxy from a VM image with cluster support (FAST).
   The basic configuration includes CentOS 7, SLURM, the selected Galaxy flavour, companion software and reference data.
   Configure, click on the "Submit" button and wait for the confirmation e-mail(s) with instructions on how to provide your passphrase (if encryption is enabled) and log in to your new Galaxy instance.
   If after some hours you do not receive any e-mail please be sure to check your SPAM BOX.
+
 
 topology_template:
   inputs:
@@ -133,6 +134,7 @@ topology_template:
         vault_wrapping_token: { get_input: vault_wrapping_token }
         vault_secret_path: { get_input: vault_secret_path }
         vault_secret_key: { get_input: vault_secret_key }
+        wn_ips: { get_attribute: [ lrms_wn, private_address ] }
         admin_email: { get_input: admin_email }
         admin_api_key: { get_input: admin_api_key }
         version: { get_input: version }
@@ -159,7 +161,7 @@ topology_template:
         - host: galaxy_portal
 
     lrms_front_end:
-      type: tosca.nodes.indigo.LRMS.FrontEnd.Slurm
+      type: tosca.nodes.indigo.LRMS.FrontEnd.SlurmGalaxy
       properties:
         wn_ips: { get_attribute: [ lrms_wn, private_address ] }
         hybrid: { get_input: hybrid }
@@ -175,6 +177,9 @@ topology_template:
             network_name: PUBLIC
             ports:
             ports:
+              galaxyctl_api_port:
+                protocol: tcp
+                source: 5001
               luks_api_port:
                 protocol: tcp
                 source: 5000
@@ -211,7 +216,7 @@ topology_template:
         size: { get_input: storage_size }
 
     wn_node:
-      type: tosca.nodes.indigo.LRMS.WorkerNode.Slurm
+      type: tosca.nodes.indigo.LRMS.WorkerNode.SlurmGalaxy
       properties:
         front_end_ip: { get_attribute: [ lrms_server, private_address, 0 ] }
         public_front_end_ip: { get_attribute: [ lrms_server, public_address, 0 ] }
@@ -223,12 +228,11 @@ topology_template:
         - dependency: galaxy_portal
 
     galaxy_wn:
-      type: tosca.nodes.indigo.GalaxyWnCvmfsReferenceData
+      type: tosca.nodes.indigo.GalaxyWNCVMFS
       properties:
         export_dir: { get_input: export_dir }
         front_end_ip: { get_attribute: [ lrms_server, private_address, 0 ] }
-        flavor: { get_input: flavor }
-        version: { get_input: version }
+        storage_encryption: { get_input: storage_encryption }
         reference_data: { get_input: reference_data }
         refdata_cvmfs_configuration: { get_input: refdata_cvmfs_configuration }
         refdata_cvmfs_repository_name: { get_input: refdata_cvmfs_repository_name }
@@ -254,12 +258,14 @@ topology_template:
             instance_type: { get_input: wn_instance_flavor }
         os:
           properties:
-            image: centos-7-galaxy-base
+            image: centos-7-galaxy-base-wn
             #image: centos-7_2nic
             #image: ubuntu-16.04-vmi
 
   outputs:
     endpoint:
       value: { concat: [ 'http://', get_attribute: [ lrms_server, public_address, 0 ], '/galaxy' ] }
-    node_ip:
+    cluster_ip:
       value: { get_attribute: [ lrms_server, public_address, 0 ] }
+    wn_ips:
+      value: { get_attribute: [ lrms_wn, private_address ] }
