--- a/tosca-templates/galaxy.yaml
+++ b/tosca-templates/galaxy.yaml
@@ -1,7 +1,7 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
 imports:
-  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/custom_types.yaml
+  - indigo_custom_types: https://raw.githubusercontent.com/mtangaro/tosca-types/master/custom_types.yaml
 
 description: >
   Deploy Galaxy on a single Virtual Machine installing it from scratch (SLOW).
@@ -49,22 +49,31 @@ topology_template:
       description: path to store galaxy data
       default: /export
 
-    galaxy_storage_type:
+    storage_encryption:
+      type: boolean
+      description: Enable storage encryption using Vault to store secrets and LUKS to encrypt
+      default: False
+      required: true
+    vault_url:
       type: string
-      description: Storage type (Iaas Block Storage, Onedata, Filesystem encryption)
-      default: "IaaS"
-    userdata_provider:
+      description: Hashicorp Vault server url
+      default: "https://cloud-90-147-75-223.cloud.ba.infn.it:8200"
+      required: false
+    vault_wrapping_token:
       type: string
-      description: default OneProvider
-      default: "not_a_privder_url"
-    userdata_token:
+      description: Vault Wrapping token to write secret
+      default: not_a_wrapping_token
+      required: false
+    vault_secret_path:
       type: string
-      description: Access token for onedata space
-      default: "not_a_token"
-    userdata_space:
+      description: Vault path to store secret
+      default: "subject/depuuid"
+      required: false
+    vault_secret_key:
       type: string
-      description: Onedata space
-      default: "galaxy"
+      description: Vault secret key name
+      default: secret
+      required: false
 
     flavor:
       type: string
@@ -75,34 +84,18 @@ topology_template:
       type: boolean
       description: Install Reference data
       default: true
-    refdata_dir:
+    refdata_cvmfs_configuration:
       type: string
-      description: path to store galaxy reference data
-      default: /cvmfs
-    refdata_repository_name:
-      type: string
-      description: Onedata space name, CernVM-FS repository name or subdirectory downaload name
-      default: 'elixir-italy.galaxy.refdata'
-    refdata_provider_type:
-      type: string
-      description: Select Reference data provider type (Onedata, CernVM-FS or download)
+      description: Configure cvmfs or load preconfigured repository
       default: 'cvmfs_preconfigured'
-    refdata_provider:
+    refdata_cvmfs_repository_name:
       type: string
-      description: Oneprovider for reference data
-      default: 'not_a_provider'
-    refdata_token:
-      type: string
-      description: Access token for reference data
-      default: 'not_a_token'
+      description: CernVM-FS repository name
+      default: 'elixir-italy.galaxy.refdata'
     refdata_cvmfs_server_url:
       type: string
       description: CernVM-FS server, replica or stratum-zero
       default: '90.147.102.186'
-    refdata_cvmfs_repository_name:
-      type: string
-      description: Reference data CernVM-FS repository name
-      default: 'elixir-italy.galaxy.refdata'
     refdata_cvmfs_key_file:
       type: string
       description: CernVM-FS public key
@@ -115,17 +108,21 @@ topology_template:
       type: integer
       description: CernVM-FS proxy port
       default: 80
-
+    refdata_dir:
+      type: string
+      description: path to store galaxy reference data
+      default: /cvmfs
  
   node_templates:
 
     galaxy:
       type: tosca.nodes.indigo.GalaxyPortalAndStorage
       properties:
-        os_storage: { get_input: galaxy_storage_type }
-        token: { get_input: userdata_token }
-        provider: { get_input: userdata_provider }
-        space: { get_input: userdata_space }
+        storage_encryption: { get_input: storage_encryption }
+        vault_url: { get_input: vault_url }
+        vault_wrapping_token: { get_input: vault_wrapping_token }
+        vault_secret_path: { get_input: vault_secret_path }
+        vault_secret_key: { get_input: vault_secret_key }
         admin_email: { get_input: admin_email }
         admin_api_key: { get_input: admin_api_key }
         version: { get_input: version }
@@ -148,17 +145,14 @@ topology_template:
       type: tosca.nodes.indigo.GalaxyReferenceData
       properties:
         reference_data: { get_input: reference_data }
-        refdata_dir: { get_input: refdata_dir }
-        flavor: { get_input: flavor }
-        refdata_repository_name: { get_input: refdata_repository_name }
-        refdata_provider_type: { get_input: refdata_provider_type }
-        refdata_provider: { get_input: refdata_provider }
-        refdata_token: { get_input: refdata_token }
-        refdata_cvmfs_server_url: { get_input: refdata_cvmfs_server_url }
+        refdata_cvmfs_configuration: { get_input: refdata_cvmfs_configuration }
         refdata_cvmfs_repository_name: { get_input: refdata_cvmfs_repository_name }
+        refdata_cvmfs_server_url: { get_input: refdata_cvmfs_server_url }
         refdata_cvmfs_key_file: { get_input: refdata_cvmfs_key_file }
         refdata_cvmfs_proxy_url: { get_input: refdata_cvmfs_proxy_url }
         refdata_cvmfs_proxy_port: { get_input: refdata_cvmfs_proxy_port }
+        refdata_dir: { get_input: refdata_dir }
+        flavor: { get_input: flavor }
       requirements:
         - host: galaxy
         - dependency: galaxy_tools
@@ -177,6 +171,12 @@ topology_template:
             network_name: PUBLIC
             private_ip: false
             ports:
+              galaxyctl_api_port:
+                protocol: tcp
+                source: 5001
+              luks_api_port:
+                protocol: tcp
+                source: 5000
               http_port:
                 protocol: tcp
                 source: 80
@@ -214,5 +214,7 @@ topology_template:
         size: { get_input: storage_size }
 
   outputs:
-    galaxy_url:
+    endpoint:
       value: { concat: [ 'http://', get_attribute: [ galaxy_server, public_address, 0 ], '/galaxy' ] }
+    node_ip:
+      value: { get_attribute: [ galaxy_server, public_address, 0 ] }
