--- a/tosca-templates/galaxy-express.yaml
+++ b/tosca-templates/galaxy-express.yaml
@@ -1,8 +1,7 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
 imports:
-  - indigo_custom_types: https://raw.githubusercontent.com/mtangaro/tosca-types/master/custom_types.yaml
-  #- indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/custom_types.yaml
+  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/v3.0.1/custom_types.yaml
 
 description: >
   Deploy Galaxy on a single Virtual Machine from a VM image (FAST).
@@ -58,7 +57,7 @@ topology_template:
     vault_url:
       type: string
       description: Hashicorp Vault server url
-      default: "https://cloud-90-147-75-223.cloud.ba.infn.it:8200"
+      default: changeit
       required: false
     vault_wrapping_token:
       type: string
