--- a/tosca-metadata/galaxy-docker.metadata.yaml
+++ b/tosca-metadata/galaxy-docker.metadata.yaml
@@ -1,6 +1,8 @@
 metadata:
   icon: https://raw.githubusercontent.com/bgruening/docker-galaxy-stable/dev/galaxy/GalaxyDocker.png 
   display_name: "Galaxy"
-  virtualization_type: "Docker"
+  ribbon: true
+  ribbon_tag: "Docker"
+  ribbon_color: "red"
   pinned: "yes"
   pin_order: 1
