--- a/tosca-metadata/galaxy-express-cluster.metadata.yaml
+++ b/tosca-metadata/galaxy-express-cluster.metadata.yaml
@@ -1,4 +1,6 @@
 metadata:
   icon: https://galaxyproject.org/images/galaxy-logos/galaxy_project_logo_square.png
   display_name: "Galaxy cluster"
-  virtualization_type: "Express"
+  ribbon: true
+  ribbon_tag: "Express"
+  ribbon_color: "blue"
