--- a/tosca-metadata/galaxy-express.metadata.yaml
+++ b/tosca-metadata/galaxy-express.metadata.yaml
@@ -1,6 +1,8 @@
 metadata:
   icon: https://galaxyproject.org/images/galaxy-logos/galaxy_project_logo_square.png
   display_name: "Galaxy"
-  virtualization_type: "Express"
+  ribbon: true
+  ribbon_tag: "Express"
+  ribbon_color: "blue"
   pinned: 'yes'
   pin_order: 0
