--- a/tosca-templates/galaxy-express-cluster.yaml
+++ b/tosca-templates/galaxy-express-cluster.yaml
@@ -1,12 +1,12 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
 imports:
-  - indigo_custom_types: https://raw.githubusercontent.com/mtangaro/tosca-types/master/custom_types.yaml
+  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/v3.0.1/custom_types.yaml
 
 description: >
   Deploy Galaxy from a VM image with cluster support (FAST).
   The basic configuration includes CentOS 7, SLURM, the selected Galaxy flavour, companion software and reference data.
-  Configure, click on the "Submit" button and wait for the confirmation e-mail(s) with instructions on how to provide your passphrase (if encryption is enabled) and log in to your new Galaxy instance.
+  Configure, click on the "Submit" button, wait for the confirmation e-mail(s) and log in to your new Galaxy instance.
   If after some hours you do not receive any e-mail please be sure to check your SPAM BOX.
 
 
