--- a/tosca-templates/galaxy.yaml
+++ b/tosca-templates/galaxy.yaml
@@ -1,7 +1,7 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
 imports:
-  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/v3.0.1/custom_types.yaml
+  - indigo_custom_types: https://raw.githubusercontent.com/mtangaro/tosca-types/v3.0.1/custom_types.yaml
 
 description: >
   Deploy Galaxy on a single Virtual Machine installing it from scratch (SLOW).
@@ -193,7 +193,7 @@ topology_template:
         # Guest Operating System properties
         os:
           properties:
-            image: centos-7-galaxy-base
+            image: centos-7-vmi
             #image: ubuntu-16.04-vmi
             #image: centos-7_2nic
       requirements:
