--- a/tosca-templates/galaxy-docker.yaml
+++ b/tosca-templates/galaxy-docker.yaml
@@ -143,7 +143,8 @@ topology_template:
         # Guest Operating System properties
         os:
           properties:
-            image: ubuntu-16.04-vmi 
+            #image: ubuntu-16.04-vmi 
+            image: RECAS-BARI-ubuntu-16.04
       requirements:
         # contextually this can only be a relationship type
         - local_storage:
