--- a/tosca-templates/galaxy-elastic-cluster.yaml
+++ b/tosca-templates/galaxy-elastic-cluster.yaml
@@ -239,7 +239,8 @@ topology_template:
             mem_size: { get_input: fe_mem }
         os:
           properties:
-            image: centos-7-vmi
+            #image: centos-7-vmi
+            image: RECAS-BARI-galaxy-base
       requirements:
         # contextually this can only be a relationship type
         - local_storage:
@@ -310,7 +311,8 @@ topology_template:
             mem_size: { get_input: wn_mem }
         os:
           properties:
-            image: centos-7-vmi
+            #image: centos-7-vmi
+            image: RECAS-BARI-galaxy-base
 
   outputs:
     endpoint:
