--- a/tosca-templates/galaxy-express-cluster.yaml
+++ b/tosca-templates/galaxy-express-cluster.yaml
@@ -220,7 +220,7 @@ topology_template:
             mem_size: { get_input: fe_mem }
         os:
           properties:
-            image: { concat: ['centos-7-', get_input: flavor,'-', get_input: version ] } # centos-7-galaxy-no-tools-release_17.05
+            image: { concat: ['RECAS-BARI-centos-7-', get_input: flavor,'-', get_input: version ] } # centos-7-galaxy-no-tools-release_17.05
       requirements:
         # contextually this can only be a relationship type
         - local_storage:
@@ -282,7 +282,7 @@ topology_template:
             mem_size: { get_input: wn_mem }
         os:
           properties:
-            image: centos-7-galaxy-wn
+            image: RECAS-BARI-galaxy-wn
 
   outputs:
     endpoint:
