--- a/tosca-templates/galaxy.yaml
+++ b/tosca-templates/galaxy.yaml
@@ -193,7 +193,8 @@ topology_template:
         # Guest Operating System properties
         os:
           properties:
-            image: centos-7-vmi
+            #image: centos-7-vmi
+            image: RECAS-BARI-galaxy-base
       requirements:
         # contextually this can only be a relationship type
         - local_storage:
