--- a/tosca-parameters/galaxy.parameters.yaml
+++ b/tosca-parameters/galaxy.parameters.yaml
@@ -6,87 +6,133 @@ inputs:
 
   instance_flavor:
     display_name: "Instance flavour"
-    tag_type: "select"
+    type: "select"
     description: "CPUs, memory size (RAM), root disk size"
     constraints: 
+      - { value: "medium", label: "Medium (2 cpu, 4 GB RAM, 20 GB dsk)" }
       - { value: "large", label: "Large (4 cpu, 8 GB RAM, 20 GB dsk)" }
-      - { value: "xlarge", label: "xLarge (8 cpu, 16 GB RAM, 20 GB dsk)" }
+      - { value: "xlarge", label: "Large (8 cpu, 16 GB RAM, 20 GB dsk)" }
+      - { value: "xxlarge", label: "Large (16 cpu, 32 GB RAM, 20 GB dsk)" }
     tab: "Virtual hardware"
-
-  instance_key_pub:
-    display_name: "Galaxy instance SSH public key"
-    tag_type: "ssh_pub_key_type"
-    description: "Paste here your SSH public key or configure a default key"
-    placeholder: 'Leave blank this field to load your default SSH public key'
-    tab: "Virtual hardware"
-    required: yes
-
-  storage_encryption:
-    display_name: "Enable encryption"
-    tag_type: "toggle"
-    description: "Encrypt instance external storage"
-    constraints:
-      - { value: "True", label: "On" }
-    tab: "Virtual hardware"
-
-  vault_secret_key:
-    tag_type: "hidden"
-    default: secret
-    tab: "Virtual hardware" # Hidden fields needs a tab, if tabs are defined
 
   storage_size:
     display_name: "Storage volume size"
-    tag_type: "select"
+    type: "select"
     description: "Select storage size"
     constraints:
       - { value: "50 GB", label: "50 GB" }
       - { value: "100 GB", label: "100 GB" }
-      - { value: "200 GB", label: "200 GB" }
-      - { value: "500 GB", label: "500 GB" }
     tab: "Virtual hardware"
+
+  os_distribution:
+    type: hidden
+    default: centos
+  os_version:
+    type: hidden
+    default: 7
+
+    #os_distribution:
+    #  display_name: 'OS'
+    #  type: 'select'
+    #  description: Operating System distribution
+    #  constraints:
+    #    - { value: 'centos', label: 'CentOS' }
+    #    - { value: 'ubuntu', label: 'Ubuntu' }
+    #  tab: "Virtual hardware"
+
+    #os_version:
+    #  type: dependent_select
+    #  parent: os_distribution
+    #  description: Operating System version
+    #  default: '16.04'
+    #  constraints:
+    #    - { value: "16.04", label: "16.04", parent_value: "ubuntu" }
+    #    - { value: "20.04", label: "20.04", parent_value: "ubuntu" }
+    #    - { value: "7",     label: "7",     parent_value: "centos" }
+    #  tab: "Virtual hardware"
 
   version:
     display_name: "Galaxy version"
-    tag_type: "select"
+    type: "select"
     description: "Galaxy release 19.05 recommended"
     constraints:
-      - { value: "release_19.05", label: "Galaxy release 19.05" }
-      - { value: "release_18.05", label: "Galaxy release 18.05" }
-      - { value: "release_17.05", label: "Galaxy release 17.05" }
+      - { value: "release_20.05", label: "Galaxy release 20.05" }
+      - { value: "release_20.09", label: "Galaxy release 20.09" }
+      - { value: "release_21.05", label: "Galaxy release 21.05" }
+      - { value: "release_21.09", label: "Galaxy release 21.09" }
+      - { value: "release_22.01", label: "Galaxy release 22.01" }
     tab: "Galaxy"
 
   instance_description:
     display_name: "Instance description"
-    tag_type: "text"
+    type: "text"
     description: "Set Galaxy Brand"
     default: "ELIXIR-ITALY"
     tab: "Galaxy"
 
   admin_email:
     display_name: "Galaxy administrator e-mail"
-    tag_type: "email"
+    type: "email"
     description: "Type a valid e-mail address."
     tab: "Galaxy"
     required: yes
 
+  admin_password:
+    display_name: "Galaxy administrator password"
+    type: secret
+    description: "Type a valid administrator password."
+    tab: "Galaxy"
+    required: yes
+  vault_token:
+    type: vault_token
+  vault_secrets_path:
+    default: "sub/dep.uuid"
+    type: secrets_path
+  vault_secrets_action:
+    default: 'read'
+    type: secrets_action
+
+  enable_interactive_tools:
+    default: true
+    type: hidden
+  export_dir:
+    default: /export
+    type: hidden
+
+  storage_encryption:
+    display_name: "Enable encryption"
+    type: "toggle"
+    description: "Encrypt instance external storage"
+    constraints:
+      - { value: "True", label: "On" }
+    tab: "Virtual hardware"
+
+  vault_encryption_token:
+    default: { "policy": "write" }
+    type: vault_token
+  vault_encryption_path:
+    type: hidden
+  vault_encryption_key:
+    default: 'storage_encryption_key'
+    type: hidden
+
+  users:
+    type: ssh_user
+
   flavor:
     display_name: "Galaxy flavours"
-    tag_type: "select"
+    type: "select"
     description: "Load Galaxy tools preset"
-    constraints: 
+    constraints:
       - { value: "galaxy-minimal", label: "Galaxy minimal" }
+      - { value: "galaxy-testing", label: "Galaxy testing" }
       - { value: "galaxy-CoVaCS", label: "Galaxy CoVaCS" }
       - { value: "galaxy-GDC_Somatic_Variant", label: "Galaxy GDC Somatic Variant Calling" }
       - { value: "galaxy-rna-workbench", label: "Galaxy RNA workbench" }
       - { value: "galaxy-epigen", label: "Galaxy Epigen" }
+      - { value: "galaxy-pillar", label: "Galaxy Somatic Variant Detection" }
     tab: "Galaxy"
 
-  refdata_cvmfs_repository_name:
-    display_name: "Reference data repository"
-    tag_type: "select"
-    description: "Select reference data repository"
-    constraints:
-      - { value: "data.galaxyproject.org", label: "usegalaxy.org Galaxy reference data CVMFS repository" }
-      - { value: "elixir-italy.covacs.refdata", label: "ELIXIR-IT Galaxy CoVaCS reference data CVMFS repository" }
-      - { value: "elixir-italy.galaxy.refdata", label: "ELIXIR-IT Galaxy reference data CVMFS repository" }
-    tab: "Galaxy"
+outputs:
+  os_users:
+    type: ssh_user
