--- a/tosca-templates/galaxy-express.yaml
+++ b/tosca-templates/galaxy-express.yaml
@@ -1,7 +1,7 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
 imports:
-  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/v3.0.1/custom_types.yaml
+  - indigo_custom_types: https://raw.githubusercontent.com/mtangaro/tosca-types/laniakea-galaxy/custom_types.yaml
 
 description: >
   Deploy Galaxy on a single Virtual Machine from a VM image (FAST).
@@ -11,6 +11,14 @@ description: >
 
 topology_template:
   inputs:
+    users:
+      type: list
+      description: list of users to create on the VM
+      entry_schema:
+        type: tosca.datatypes.indigo.User
+      default: []
+      required: false
+
     instance_flavor:
       type: string
       description: instance flavor (num_cpu, memory, disk)
@@ -20,18 +28,56 @@ topology_template:
       description: storage memory required for the instance
       default: 10 GB      
 
+    # Storage encryption
+    storage_encryption:
+      type: boolean
+      description: Enable storage encryption using Vault to store secrets and LUKS to encrypt
+      default: False
+      required: true
+    vault_encryption_token:
+      type: tosca.datatypes.indigo.VaultToken
+      description: Vault write token for storage encryption
+      default: { "policy": "write" }
+      required: false
+    vault_encryption_path:
+      type: string
+      description: Secret path for encryption passphrase
+      default: "sub/dep.uuid/storage_encryption"
+      required: false
+    vault_encryption_key:
+      type: string
+      description: Secret key for encryption passphrase
+      default: 'storage_encryption_key'
+      required: false
+
+    # Galaxy
     admin_email:
       type: string
       description: email of the admin user
       default: admin@admin.com
-    admin_api_key:
+    admin_password:
       type: string
-      description: key to access the API with admin role
-      default: not_very_secret_api_key
-    user:
+      description: password of the admin user
+      default: galaxy_admin_password
+    ## Vault section for admin_password
+    vault_token:
+      type: tosca.datatypes.indigo.VaultToken
+      description: Hashicorp endpoint description
+      default: {}
+      required: false
+    vault_secrets_path:
       type: string
-      description: username to launch the galaxy daemon
-      default: galaxy
+      description: Secret path
+      default: "sub/dep.uuid/user_secrets"
+      required: false
+    vault_secrets_action:
+      type: string
+      description: Write or read secret
+      default: read
+      required: false
+      constraints:
+        - valid_values: ['read','write']
+    ## End Vault section for admin_password
     version:
       type: string
       description: galaxy version to install
@@ -40,139 +86,69 @@ topology_template:
       type: string
       description: galaxy instance description
       default: "INDIGO Galaxy test"
-    instance_key_pub:
-      type: string
-      description: galaxy instance ssh public key
-      default: your_ssh_public_key
     export_dir:
       type: string
       description: path to store galaxy data
       default: /export
-
-    storage_encryption:
+    enable_interactive_tools:
       type: boolean
-      description: Enable storage encryption using Vault to store secrets and LUKS to encrypt
-      default: False
-      required: true
-    vault_url:
-      type: string
-      description: Hashicorp Vault server url
-      default: changeit
-      required: false
-    vault_wrapping_token:
-      type: string
-      description: Vault Wrapping token to write secret
-      default: not_a_wrapping_token
-      required: false
-    vault_secret_path:
-      type: string
-      description: Vault path to store secret
-      default: "subject/depuuid"
-      required: false
-    vault_secret_key:
-      type: string
-      description: Vault secret key name
-      default: secret
+      description: Enable Galaxy Interactive Tools (install docker)
+      default: true
       required: false
 
     flavor:
       type: string
       description: Galaxy flavor for tools installation
       default: "galaxy-no-tools"
-    remote_tool_deps_dir_url:
-      type: string
-      description: tools tar gz location
-      default: 'http://cloud.recas.ba.infn.it:8080/v1/AUTH_3b4918e0a982493e8c3ebcc43586a2a8/Laniakea-generic-cloud-images'
 
-    reference_data:
-      type: boolean
-      description: Install Reference data
-      default: true
-    refdata_cvmfs_configuration:
-      type: string
-      description: Configure cvmfs or load preconfigured repository
-      default: 'cvmfs_preconfigured'
-    refdata_cvmfs_repository_name:
-      type: string
-      description: CernVM-FS repository name
-      default: 'elixir-italy.galaxy.refdata'
-    refdata_cvmfs_server_url:
-      type: string
-      description: CernVM-FS server, replica or stratum-zero
-      default: '90.147.102.186'
-    refdata_cvmfs_key_file:
-      type: string
-      description: CernVM-FS public key
-      default: 'elixir-italy.galaxy.refdata.pub'
-    refdata_cvmfs_proxy_url:
-      type: string
-      description: CernVM-FS proxy url
-      default: 'DIRECT'
-    refdata_cvmfs_proxy_port:
-      type: integer
-      description: CernVM-FS proxy port
-      default: 80
-    refdata_dir:
-      type: string
-      description: path to store galaxy reference data
-      default: /cvmfs
- 
   node_templates:
 
-    galaxy:
-      type: tosca.nodes.indigo.GalaxyPortalFastConfig
+    luks_encryption:
+      type: tosca.nodes.indigo.LuksEncryption
       properties:
         storage_encryption: { get_input: storage_encryption }
-        vault_url: { get_input: vault_url }
-        vault_wrapping_token: { get_input: vault_wrapping_token }
-        vault_secret_path: { get_input: vault_secret_path }
-        vault_secret_key: { get_input: vault_secret_key }
+        vault_encryption_token: { get_input: vault_encryption_token }
+        vault_encryption_path:  { get_input: vault_encryption_path }
+        vault_encryption_key:  { get_input: vault_encryption_key }
+      requirements:
+        - host: galaxy_server
+
+    galaxy:
+      type: tosca.nodes.indigo.GalaxyPortalExpress
+      properties:
         admin_email: { get_input: admin_email }
-        admin_api_key: { get_input: admin_api_key }
+        vault_token: { get_input: vault_token }
+        vault_secrets:
+          path: { get_input: vault_secrets_path }
+          data:
+            admin_password: { get_input: admin_password }
+          action: { get_input: vault_secrets_action }
         version: { get_input: version }
         instance_description: { get_input: instance_description }
-        instance_key_pub: { get_input: instance_key_pub }
         export_dir: { get_input: export_dir }
+        enable_interactive_tools: { get_input: enable_interactive_tools }
         flavor: { get_input: flavor }
-        remote_tool_deps_dir_url: { get_input: remote_tool_deps_dir_url }
       requirements:
         - lrms: local_lrms
-
-    galaxy_refdata:
-      type: tosca.nodes.indigo.GalaxyReferenceData
-      properties:
-        reference_data: { get_input: reference_data }
-        refdata_cvmfs_configuration: { get_input: refdata_cvmfs_configuration }
-        refdata_cvmfs_repository_name: { get_input: refdata_cvmfs_repository_name }
-        refdata_cvmfs_server_url: { get_input: refdata_cvmfs_server_url }
-        refdata_cvmfs_key_file: { get_input: refdata_cvmfs_key_file }
-        refdata_cvmfs_proxy_url: { get_input: refdata_cvmfs_proxy_url }
-        refdata_cvmfs_proxy_port: { get_input: refdata_cvmfs_proxy_port }
-        refdata_dir: { get_input: refdata_dir }
-        flavor: { get_input: flavor }
-      requirements:
-        - host: galaxy
+        - dependency: luks_encryption
 
     # type to describe a Galaxy not using any LRMS but using the local system
     local_lrms:
       type: tosca.nodes.indigo.LRMS.FrontEnd.Local
       requirements:
         - host: galaxy_server
- 
+        - dependency: luks_encryption
+
     galaxy_server:
       type: tosca.nodes.indigo.Compute
+      properties:
+        os_users: { get_input: users }
       capabilities:
         endpoint:
           properties:
             network_name: PUBLIC
             private_ip: false
             ports:
-              galaxyctl_api_port:
-                protocol: tcp
-                source: 5001
-              luks_api_port:
-                protocol: tcp
-                source: 5000
               http_port:
                 protocol: tcp
                 source: 80
@@ -189,7 +165,8 @@ topology_template:
         # Guest Operating System properties
         os:
           properties:
-            image: { concat: ['centos-7-', get_input: flavor,'-', get_input: version ] } # centos-7-galaxy-no-tools-release_17.05
+            image: galaxy-express
+            #version: v1.0.0
       requirements:
         # contextually this can only be a relationship type
         - local_storage:
@@ -210,5 +187,8 @@ topology_template:
   outputs:
     endpoint:
       value: { concat: [ 'http://', get_attribute: [ galaxy_server, public_address, 0 ], '/galaxy' ] }
+      #value: { concat: [ 'http://', get_attribute: [ galaxy_server, public_address, 0 ] ] }
     node_ip:
       value: { get_attribute: [ galaxy_server, public_address, 0 ] }
+    os_users:
+      value: { get_property: [ galaxy_server, os_users, 0 ] }
