--- a/tosca-templates/galaxy.yaml
+++ b/tosca-templates/galaxy.yaml
@@ -71,6 +71,10 @@ topology_template:
       type: string
       description: email of the admin user
       default: admin@admin.com
+    admin_api_key:
+      type: string
+      description: api key admin user.
+      default: not_very_secret_api_key
     admin_password:
       type: string
       description: password of the admin user
@@ -138,6 +142,7 @@ topology_template:
       type: tosca.nodes.indigo.GalaxyPortal
       properties:
         admin_email: { get_input: admin_email }
+        admin_api_key: { get_input: admin_api_key }
         retrieve_passphrase_from_vault: { get_input: retrieve_passphrase_from_vault }
         vault_token: { get_input: vault_token }
         vault_secrets:
