--- a/tosca-templates/galaxy-express.yaml
+++ b/tosca-templates/galaxy-express.yaml
@@ -35,9 +35,11 @@ topology_template:
       default: False
       required: true
     vault_encryption_token:
-      type: tosca.datatypes.indigo.VaultToken
+      type: map
       description: Vault write token for storage encryption
-      default: { "policy": "write" }
+      entry_schema:
+        type: tosca.datatypes.indigo.VaultToken
+      default: {}
       required: false
     vault_encryption_path:
       type: string
@@ -70,8 +72,10 @@ topology_template:
       default: false
       required: false
     vault_token:
-      type: tosca.datatypes.indigo.VaultToken
+      type: map
       description: Hashicorp endpoint description
+      entry_schema:
+        type: tosca.datatypes.indigo.VaultToken
       default: {}
       required: false
     vault_secrets_path:
