--- a/tosca-templates/galaxy-docker.yaml
+++ b/tosca-templates/galaxy-docker.yaml
@@ -1,13 +1,21 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
 imports:
-  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/v3.0.1/custom_types.yaml
+  - indigo_custom_types: https://raw.githubusercontent.com/mtangaro/tosca-types/laniakea-galaxy/custom_types.yaml
 
 description: >
   Deploy Galaxy docker image on a single Virtual Machine.
 
 topology_template:
   inputs:
+    users:
+      type: list
+      description: list of users to create on the VM
+      entry_schema:
+        type: tosca.datatypes.indigo.User
+      default: []
+      required: false
+
     instance_flavor:
       type: string
       description: instance flavor (num_cpu, memory, disk)
@@ -17,98 +25,124 @@ topology_template:
       description: storage memory required for the instance
       default: 50 GB      
 
-    admin_email:
-      type: string
-      description: email of the admin user
-      default: ma.tangaro@gmail.com
-    admin_api_key:
-      type: string
-      description: key to access the API with admin role
-      default: GALAXY_ADMIN_API_KEY
-    user:
-      type: string
-      description: username to launch the galaxy daemon
-      default: galaxy
-    version:
-      type: string
-      description: galaxy version to install
-      default: release_18.05
-    instance_description:
-      type: string
-      description: galaxy instance description
-      default: "INDIGO Galaxy test"
-    instance_key_pub:
-      type: string
-      description: galaxy instance ssh public key
-      default: 'changeit'
-    export_dir:
-      type: string
-      description: path to store galaxy data
-      default: /export
-
+    # Storage encryption
     storage_encryption:
       type: boolean
       description: Enable storage encryption using Vault to store secrets and LUKS to encrypt
       default: False
       required: true
-    vault_url:
-      type: string
-      description: Hashicorp Vault server url
-      default: changeit
+    vault_encryption_token:
+      type: map
+      description: Vault write token for storage encryption
+      entry_schema:
+        type: tosca.datatypes.indigo.VaultToken
+      default: {}
       required: false
-    vault_wrapping_token:
+    vault_encryption_path:
       type: string
-      description: Vault Wrapping token to write secret
-      default: not_a_wrapping_token
+      description: Secret path for encryption passphrase
+      default: "sub/dep.uuid/storage_encryption"
       required: false
-    vault_secret_path:
+    vault_encryption_key:
       type: string
-      description: Vault path to store secret
-      default: "subject/depuuid"
+      description: Secret key for encryption passphrase
+      default: 'storage_encryption_key'
       required: false
-    vault_secret_key:
+
+    # Galaxy
+    admin_email:
       type: string
-      description: Vault secret key name
-      default: secret
+      description: email of the admin user
+      default: admin@admin.com
+    admin_api_key:
+      type: string
+      description: api key admin user.
+      default: random
+    admin_password:
+      type: string
+      description: password of the admin user
+      default: galaxy_admin_password
+    ## Vault section for admin_password
+    retrieve_passphrase_from_vault:
+      type: boolean
+      description: Enable Vault Password workflow
+      default: false
+      required: false
+    vault_token:
+      type: map
+      description: Hashicorp endpoint description
+      entry_schema:
+        type: tosca.datatypes.indigo.VaultToken
+      default: {}
+      required: false
+    vault_secrets_path:
+      type: string
+      description: Secret path
+      default: "sub/dep.uuid/user_secrets"
+      required: false
+    vault_secrets_action:
+      type: string
+      description: Write or read secret
+      default: read
+      required: false
+      constraints:
+        - valid_values: ['read','write']
+    ## End Vault section for admin_password
+    version:
+      type: string
+      description: galaxy version to install
+      default: master
+    instance_description:
+      type: string
+      description: galaxy instance description
+      default: "INDIGO Galaxy test"
+    export_dir:
+      type: string
+      description: path to store galaxy data
+      default: /export
+    enable_interactive_tools:
+      type: boolean
+      description: Enable Galaxy Interactive Tools (install docker)
+      default: true
       required: false
 
     flavor:
       type: string
       description: Galaxy flavor for tools installation
-      default: "bgruening/galaxy-stable"
+      default: "galaxy-no-tools"
 
-    reference_data:
-      type: boolean
-      description: Install Reference data
-      default: true
-    refdata_cvmfs_repository_name:
-      type: string
-      description: CernVM-FS repository name
-      default: 'elixir-italy.galaxy.refdata'
-      required: false
- 
   node_templates:
+
+    luks_encryption:
+      type: tosca.nodes.indigo.LuksEncryption
+      properties:
+        storage_encryption: { get_input: storage_encryption }
+        vault_encryption_token: { get_input: vault_encryption_token }
+        vault_encryption_path:  { get_input: vault_encryption_path }
+        vault_encryption_key:  { get_input: vault_encryption_key }
+      requirements:
+        - host: galaxy_server
 
     galaxy:
       type: tosca.nodes.indigo.GalaxyPortalDocker
       properties:
-        storage_encryption: { get_input: storage_encryption }
-        vault_url: { get_input: vault_url }
-        vault_wrapping_token: { get_input: vault_wrapping_token }
-        vault_secret_path: { get_input: vault_secret_path }
-        vault_secret_key: { get_input: vault_secret_key }
         admin_email: { get_input: admin_email }
         admin_api_key: { get_input: admin_api_key }
+        retrieve_passphrase_from_vault: { get_input: retrieve_passphrase_from_vault }
+        vault_token: { get_input: vault_token }
+        vault_secrets:
+          path: { get_input: vault_secrets_path }
+          data:
+            admin_password: { get_input: admin_password }
+          action: { get_input: vault_secrets_action }
         version: { get_input: version }
         instance_description: { get_input: instance_description }
-        instance_key_pub: { get_input: instance_key_pub }
         export_dir: { get_input: export_dir }
+        enable_interactive_tools: { get_input: enable_interactive_tools }
         flavor: { get_input: flavor }
-        reference_data: { get_input: reference_data }
-        refdata_cvmfs_repository_name: { get_input: refdata_cvmfs_repository_name }
-
       requirements:
         - lrms: local_lrms
+        - dependency: luks_encryption
 
     # type to describe a Galaxy not using any LRMS but using the local system
     local_lrms:
@@ -118,6 +152,8 @@ topology_template:
  
     galaxy_server:
       type: tosca.nodes.indigo.Compute
+      properties:
+        os_users: { get_input: users }
       capabilities:
         endpoint:
           properties:
@@ -143,7 +179,8 @@ topology_template:
         # Guest Operating System properties
         os:
           properties:
-            image: ubuntu-16.04-vmi 
+              distribution: ubuntu
+              version: 20.04 
       requirements:
         # contextually this can only be a relationship type
         - local_storage:
@@ -166,3 +203,5 @@ topology_template:
       value: { concat: [ 'http://', get_attribute: [ galaxy_server, public_address, 0 ] ] }
     node_ip:
       value: { get_attribute: [ galaxy_server, public_address, 0 ] }
+    os_users:
+      value: { get_property: [ galaxy_server, os_users, 0 ] }
